# mudmaker

./: .gitignore  README.md  requirements.txt  setup.cfg
docs/: .buildinfo  genindex.html  index.html  installation.html  mudmaker.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_sources/: installation.rst.txt  quickstart.rst.txt
docs/_static/: documentation_options.js
examples/: empty.py
html/: index.html  main.js
mudmaker/: __init__.py  account_store.py  attributes.py  base.py  directions.py  exc.py  exits.py  game.py  main.py  menus.py  objects.py  parsers.py  rooms.py  socials.py  socials_test.py  sources.py  tasks.py  util.py  websockets.py  zones.py
mudmaker/ext/: admin_parser.py  builder_parser.py
sphinx/: conf.py  index.rst  mudmaker.rst
tests/: accounts_test.py  attributes_test.py  base_test.py  conftest.py  directions_test.py  events_test.py  exit_test.py  game_test.py  match_test.py  menu_test.py  object_test.py  room_test.py  socials_test.py  tasks_test.py  util_test.py  zone_test.py
