[metadata]
name = mudmaker
summary = Make MUDs with Python classes.
author = Chris Norman
author-email = chris.norman2@googlemail.com
description-file = README.md
home-page = https://github.com/chrisnorman7/
license = MPL-2

[entry_points]
console_scripts =
    mudmaker = mudmaker.main:main

[tool:pytest]
testpaths = "tests"
addopts = "-xq"

[flake8]
exclude = env, .eggs, build
